--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ OLLAMA_ENDPOINT=https://ollama.com/api
 ZAI_API_KEY=
 ZAI_GENERAL_ENDPOINT=https://api.z.ai/api/paas/v4
 ZAI_CODING_ENDPOINT=https://api.z.ai/api/coding/paas/v4
+
+# Site Configuration (Required for OAuth in production)
+# Set to your production URL (e.g., https://your-app.vercel.app)
+NEXT_PUBLIC_SITE_URL=http://localhost:6002
