Fix vercel.json env configuration

--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,6 @@
   "framework": "nextjs",
   "devCommand": "npm run dev",
   "env": {
-    "NEXT_PUBLIC_SITE_URL": {
-      "description": "The production URL of your app (e.g., https://your-app.vercel.app)",
-      "value": "https://your-app.vercel.app"
-    }
+    "NEXT_PUBLIC_SITE_URL": "https://traetlzlxn2t.vercel.app"
   }
 }
